[project]
name = "the-mountain"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "mrmattwright", email = "matt@mrmattwright.com" }]
dependencies = ["ipykernel>=6.29.5", "plotly>=5.24.1", "nbformat>=5.10.4"]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/the_mountain"]
